--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Fausts Tagebuch</title>
+  <title>Gretchens Tagebuch</title>
   <link rel="stylesheet" href="./src/css/book.css">
+  <link rel="icon" href="./src/images/Gretchen.ico" />
   <link href='https://fonts.googleapis.com/css?family=Gabriela' rel='stylesheet' type='text/css'><link rel="stylesheet" href="static/css/book.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
-<script src="static/js/sound.js"></script>
+
 
 </head>
 <body>
@@ -110,6 +111,9 @@ The Shrine of Pride is found within the Ghostfence, just northeast of the Ghostg
       </div><!-- .content -->
     </div><!-- .side-2 -->
   </div><!-- #page-4 -->
+</div>
+<div class="credit">
+  <p></p>
 </div>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
