--- a/index.html
+++ b/index.html
@@ -18,20 +18,36 @@
   <div id='page-1' class='page no-anim'>    
     <div class='side-1' id='p1'>
       <div class='content'>
-        <h1>The Pilgrim's Path</h1>
+        <h1>Einblick in Gretchens Tagebuch (Vorwort)</h1>
         <p>
-          The pilgrim must visit each of the Shrines of the Seven Graces. At each site the pilgrim must stand before the three-sided stone triolith and read the inscription. To ease the pilgrim's task, the Temple has made this list of shrines along with directions and advice to pilgrims. The blessings of each shrine last at least a half day.
+          Da Magarethe, auch bekannt als Gretchen, ein uneheliches Kind zur Welt brachte und dies daraufhin umbrachte ,wurde ihr den Prozess gemacht. Nun sitzt sie ihr Urteil im Kerker ab. Dieses folgende Tagebuch stellt die möglichen inneren Vorgänge in Gretchens Verstand da. 
         </p>
+        
       </div><!-- .content -->
     </div><!-- .side-1 -->    
     <div class='side-2' id='p2'>      
       <div class='content'>
-        <h2>The Fields of Kummu: Shrine of Humility</h2>
+        <h2>Tag 1: Die Schuld</h2>
         <p>
-          Here Lord Vivec met a poor farmer whose guar had died. The farmer could not harvest his muck without his guar, and he could not provide for his family or his village. So the Lord Vivec removed his fine clothes and toiled in the fields like a beast of burden until the crop was harvested. It is at the Fields of Kummu we go to pray for the same humility Lord Vivec showed on that day.
+          Und nun saß ich im Kerker. 
+          Wie auch ich drüber nachdenk...
+          Mein Verstand? Meine Liebe?
+          Alles dahin.
+          Meine Mutter und Kind sind nun beide tot. Und Heinrich? HEINRICH??
+          Bin ich nur allein Schuld an meines Leidens?
+          Nein, dies kann nicht sein! Das ist nicht wahr.
+          Der Wahrhaftige Teufel und Schuld meines Leidens muss dieser Mephistoles sein. 
+          Dieser Mephistoles, den Heinrich bei sich hatte...Er muss die Ursache all meines und Heinriches Unglücks sein.
+          Er soll doch zur Hölle fahren dieser Mephistoles!
+          Er war derjenige der den Trunk den ich meiner Mutter verabreichte mit Gift gemischet hatte!
+          O Gott, lass nur diesen verdammten Teufel in der Hölle schmorren...
+          Was aber nun mit Heinrich?
+          O wahrlich,
+          Ohne Heinrich wäre die Welt mir vergällt...
+          O lieber heinrich, wenn ich dich nur sehen könne... 
         </p>
         <p>
-The Fields of Kummu are west of Suran on the north shore of Lake Amaya as you head towards Pelagiad. The shrine is between two rocks, and most easily noticed while traveling east along the road. Alof's farm nearby has a small dock on the north bank of Lake Amaya. This is the only dock nearby which Alof kindly allows servants of the Temple to use. It is customary to leave a portion of muck at the shrine to represent Vivec's humility.
+
         </p>
       </div><!-- .content -->
     </div><!-- .side-2 -->
@@ -40,13 +56,21 @@ The Fields of Kummu are west of Suran on the north shore of Lake Amaya as you he
   <div id='page-2' class='page no-anim'>    
     <div class='side-1' id='p3'>
       <div class='content'>
-        <h2>To Stop the Moon: The Shrine of Daring</h2>
+        <h2>Tag 2: Heinrich? und Gretchens Wahn</h2>
         <p>
-When Sheogorath rebelled against the Tribunal, he tricked the moon Baar Dau into forsaking its appointed path through Oblivion. The Mad Star inspired the moon to hurl itself upon Vivec's new city, which Sheogorath claimed was built in mockery of the heavens. When Vivec learned of Sheogorath's scheme, he froze the rogue moon in the sky with a single gesture and the grace of his countenance. Overwhelmed by the courage and daring of Vivec, the moon Baar Dau swore itself to eternal service of the Tribunal and all its works. Thus the moon now stands guard over the palace, and serves as a citadel for the Temple's Ordinators.
+          Der zweite Tag bricht nun ein, wo ich das Urteil im Kerker ausharre.
+          Bald isset auch meine Hinrichtung und die Erlösung durch Gottes Gnade.
+          Gottes Gnade?
+          Oh, Heinrich hatte nie meine Frage nach Gottes glaube beantwortet. Nun wundere ich mich, wie es um meinem geliebten Heinrichs Wohles gehe. Ach, Heinrich...der könne ebenfalls in der Hölle schmorren... Hätte dieser verdammte Faust nur nicht mit mir ein Kind gebärt...
+          Nein, ich , nur ich bin nicht an dieser Geburt Schuld? Bin ich nun Schuld? Oh meine Güte? Hab ich wirklich mein Kind selber zu Tode gebracht? Was habe ich nun getan?? Der Tod ist nun wirklich die einzig Wahrhaftige Erlösung meines Leidens. 
+          Bin ich ein M-
+          Monster?
+          NEIN!!! 
+          DIES KANN NICHT WAHR SEIN!!!
+          O Gott, der barmherzige, bitte verzeihet meine Sünde! 
+          nein, ich bin nicht an meiner Mutters Tod verantwortlich!            
         </p>
-        <p>
-The Shrine of Daring is found in the city of Vivec, in the Temple District, along the western wall of the High Fane, the great Temple of Vvardenfell. When you address the shrine, it is customary to leave behind a Potion of Rising Force. Suitable potions may be purchased from the Temple. Homemade potions are not acceptable.
-          </p>
+        <p>KONTEXT: Da Gretchen nun Wahnsinnig geworden ist, spricht sie mit sich selber und ist komplett Wahnsinnig geworden</p>
       </div><!-- .content -->
     </div><!-- .side-1 -->    
     <div class='side-2' id='p4'>      
@@ -56,7 +80,7 @@ The Shrine of Daring is found in the city of Vivec, in the Temple District, alon
           Long after Lord Nerevar and the Tribunal triumphed over Dagoth Ur, the people wished to build a monument to the heroes of that war. Vivec thanked them, but said that it would be better to dedicate a monument not only to the glorious heroes, but to all people, great and small, who suffered and died in the war. It became the custom to make offerings here, either in thanks of our good fortune, or for those less fortunate.
         </p>
         <p>
-The Shrine of Generosity is on the top steps of Vivec's Palace, the southernmost Canton of Vivec City. The customary donation for those in good fortune is 100 gold.
+        The Shrine of Generosity is on the top steps of Vivec's Palace, the southernmost Canton of Vivec City. The customary donation for those in good fortune is 100 gold.
         </p>
       </div><!-- .content -->
     </div><!-- .side-2 -->
