--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
           Nein, dies kann nicht sein! Das ist nicht wahr.
           Der Wahrhaftige Teufel und Schuld meines Leidens muss dieser Mephistoles sein. 
           Dieser Mephistoles, den Heinrich bei sich hatte...Er muss die Ursache all meines und Heinriches Unglücks sein.
-          Er soll doch zur Hölle fahren dieser Mephistoles!
           Er war derjenige der den Trunk den ich meiner Mutter verabreichte mit Gift gemischet hatte!
-          O Gott, lass nur diesen verdammten Teufel in der Hölle schmorren...
           Was aber nun mit Heinrich?
           O wahrlich,
           Ohne Heinrich wäre die Welt mir vergällt...
@@ -59,11 +57,11 @@
         <h2>Tag 2: Heinrich? und Gretchens Wahn</h2>
         <p>
           Der zweite Tag bricht nun ein, wo ich das Urteil im Kerker ausharre.
-          Bald isset auch meine Hinrichtung und die Erlösung durch Gottes Gnade.
+          Bald ist auch meine Hinrichtung und die Erlösung durch Gottes Gnade.
           Gottes Gnade?
-          Oh, Heinrich hatte nie meine Frage nach Gottes glaube beantwortet. Nun wundere ich mich, wie es um meinem geliebten Heinrichs Wohles gehe. Ach, Heinrich...der könne ebenfalls in der Hölle schmorren... Hätte dieser verdammte Faust nur nicht mit mir ein Kind gebärt...
+          Oh, Heinrich hatte nie meine Frage nach Gottes glaube beantwortet. Nun wundere ich mich, wie es um meinem geliebten Heinrichs Wohles gehe. Ach, Heinrich... 
           Nein, ich , nur ich bin nicht an dieser Geburt Schuld? Bin ich nun Schuld? Oh meine Güte? Hab ich wirklich mein Kind selber zu Tode gebracht? Was habe ich nun getan?? Der Tod ist nun wirklich die einzig Wahrhaftige Erlösung meines Leidens. 
-          Bin ich ein M-
+          Bin ich ein
           Monster?
           NEIN!!! 
           DIES KANN NICHT WAHR SEIN!!!
@@ -75,12 +73,38 @@
     </div><!-- .side-1 -->    
     <div class='side-2' id='p4'>      
       <div class='content'>
-        <h2>The Palace: Shrine of Generosity</h2>
+        <h2>Tag 3: Heinrich und ich wieder vereint?</h2>
         <p>
-          Long after Lord Nerevar and the Tribunal triumphed over Dagoth Ur, the people wished to build a monument to the heroes of that war. Vivec thanked them, but said that it would be better to dedicate a monument not only to the glorious heroes, but to all people, great and small, who suffered and died in the war. It became the custom to make offerings here, either in thanks of our good fortune, or for those less fortunate.
-        </p>
-        <p>
-        The Shrine of Generosity is on the top steps of Vivec's Palace, the southernmost Canton of Vivec City. The customary donation for those in good fortune is 100 gold.
+         Erst ich dacht mein Henker sei von Gott geschickt worden um mir meine Erlösung zu gewähren 
+         Doch...
+         Doch wahrlich...
+         Nun...
+         Dieses Kind...
+         Sie!!!
+         Sie nahmen es mir!!!
+         sie versuchten mich zu kränken?
+         Nein, dies kann nicht sein.
+         Ich musset das Kind tränken...
+         Diese Geburt war Anfang und Ursache meines Leidens, wie nur hätt ich es nicht tränken sollen
+         Sag es mir, wie nur hätt ich es nicht tun können?
+         Dieses Leiden....
+         Ich wunschet der Henker würd mich richten und mich zu meinem Herr bringen.
+         Dann waren all meine Sorgen weg. 
+         Oh weh! Wer waret derjenige ich dacht er würd mich erlösen, es waret doch die Freundes Stimme!
+         Ich fühlte mich ach so frei in diesem Moment!
+         Was ein wunderbarer Moment
+         Und ich dachet schon meine Tage waren gezählt...
+         ich, noch ach so junges weib, dacht der Henker wollet mich um Mitternacht holen.
+         Doch diese Stimme...
+         Es war mein Heinrich!
+         Ich fühlte mich gerettet
+         Als ich nun diesen Heinrich sah...
+         Ich sah die Straße, wo ich ihn zu erst in die wundervollen Augen sah
+         Was für ein schöner Anblick!
+         Doch er meinte wir dürften nicht küssen?
+          Warum dürfet wir nicht küssen?
+          Warum....
+          Warum nur?
         </p>
       </div><!-- .content -->
     </div><!-- .side-2 -->
@@ -89,55 +113,52 @@
   <div id='page-3' class='page no-anim'>    
     <div class='side-1' id='p5'>
       <div class='content'>
-        <h2>The Puzzle Canal: The Shrine of Courtesy</h2>
+        <h2>Tag 3: Heinrich und ich wieder vereint? TEIL 2</h2>
         <p>
-          In a battle with Mehrunes Dagon, Vivec gave his own silver longsword to the Daedra Lord rather than dishonor himself by fighting an unarmed foe. This so impressed the Dremora, the most honorable and chivalrous of Mehrunes Dagon's Daedric servants, that they now share a bond of respect and courtesy with the followers of the Tribunal, though we must never forget that they are our enemies.
+          O, Als ich versuchet ihn zu küssen... 
+          O weh, seine Lippen waren kalt 
+          Kalt wie Eis...
+          Ich spühret in diesem Moment.
+          Sein Lieben ist weg!
+          Wo waret sein Lieben ich ach so mochte?
+          Doch dann erschlug es mich in binnen eines Momentes!
+          War das wirklich der Heinrich den ich kannte zu lieben mocht?
+          O, erst seine Hände!
+          Erst ich dacht sie waren feucht mit Wasser.
+          Doch ich sah Blut an seinen Händen!
+          Blut!
+          rotes Blut!
+          So rot wie Wein...
         </p>
-        <p>
-          The Shrine of Courtesy is found in the heart of the Puzzle Canal, a labyrinth beneath Lord Vivec's Palace in the city of Vivec. The journey though the Puzzle Canal can be confusing and it is suggested that common pilgrims carry a scroll of ALMSIVI Intervention in case they get lost. The Dremora Krazzt is found in the center of the Puzzle Canal, and will accept a plain silver longsword if spoken to with courtesy. After Krazzt accepts the sword, pilgrims must read the inscription on the triolith.
-        </p>
-      </div><!-- .content -->
-    </div><!-- .side-1 -->    
-    <div class='side-2' id='p6'>      
-      <div class='content'>
-        <h2>The Mask of Vivec: Shrine of Justice</h2> 
-        <p>
-          Near the altar is Vivec's Ash Mask. In the Days of Fire when Dagoth Ur first crept back into Red Mountain and awakened it, Vivec led refugees here as they fled the ash and blight. Weary, they rested here a while. When Vivec awoke, he found himself and all his followers encased in casts of grey ash. Frozen like a sleeping statue and unable to free himself or help his people, Vivec was filled with despair. Vivec's tears weakened his ash cast. He tore the ash from his perished followers, breathed life into their lungs, and cured them of the blight. This is Vivec's heroism -- his tender heart provides strength when his might fails.
-        </p>
-        <p>
-The Shrine of Justice is guarded within the Gnisis Temple, in the village of Gnisis, northwest by road from the town of Ald'ruhn. When you address the shrine, it is customary to leave a potion of Cure Common Disease as a token of your respect for justice. Suitable potions may be purchased from Temple. Homemade potions are not acceptable.
-        </p>
-      </div><!-- .content -->
-    </div><!-- .side-2 -->
-  </div><!-- #page-3 -->
-  
-  <div id='page-4' class='page no-anim'>    
-    <div class='side-1' id='p7'>
-      <div class='content'>
-        <h2>Koal Cave: The Shrine of Valor</h2>
-        <p>
-          Within the Koal Cave, Vivec fought a battle with Ruddy Man, the father of the Dreugh. When he defeated Ruddy Man, Vivec spared his life, on the condition that Ruddy Man and his children would give up their tough hides to serve as armor for the Dunmer.
-        </p>
-        <p>
-          The Shrine of Valor is inside the Koal Cave, a cavern on the seacoast west of the ancient stronghold Berandas and south of Gnisis. The cave mouth faces south, towards the sea, and is marked by a large natural arch of stone. The region is wilderness, and finding the cave mouth can be difficult. Dreugh within the cave itself are fearsome enemies; only experienced and capable adventurers should attempt to re-enact the epic battle with the dreugh in the cave. Dreugh wax may be bought at the Temple in Gnisis. When you address the shrine, it is customary to leave a portion of dreugh wax as a token of Vivec's victorious struggle with Ruddy Man.
-        </p>
-      </div><!-- .content -->
-    </div><!-- .side-1 -->    
-    <div class='side-2' id='p8'>      
-      <div class='content'>
-        <h2>The Ghostfence: The Shrine of Pride</h2>
-        <p>
-          The Ghostfence is a lasting symbol of the indomitable will and power of ALMSIVI, and a monument to Dunmer pride in overcoming its enemies.
-        </p>
-        <p>
-The Shrine of Pride is found within the Ghostfence, just northeast of the Ghostgate itself. The safest route to Ghostgate is along the Foyada Mamaea, a volcanic ravine running from the top of Red Mountain southwest to its end just below Balmora. An old Dwemer bridge crosses the foyada near Fort Moonmoth. A pilgrim may follow the Foyada Mamaea all the way to Ghostgate. Any journey inside the Ghostfence is dangerous, but even the most timid pilgrim should be safe, so long as he does not stray too far from the Ghostgate and flees from any minions of Dagoth Ur. When you address the shrine, it is customary to leave a soul gem in remembrance of our ancestors who were bound to the Tribunal's service.
+        <p> 
+          O dieser Faust
+          Er solle doch übrig bleiben! 
+          Um das Grab meiner verstorbenen Mutter...
+          Nein, ich war es die sie tötete!
+          Und daneben sollen mein Bruder und Valentin liegen.
+          Aber, nicht zu weit daneben!
+          Nur den richtigen Abstand zu den beiden soll mein Grab haben
+          Ich hoff nun Faust fand sein armes Kind im Teich...
+          Und ebenfalls meine Mutter...
+          Sie schlief ein für die Ewigkeit...
+          Nur für meines und Heinriches Glück!
+          Da nun Heinrich fort ist, wart ich auf Gottes Gericht
+          
         </p>
       </div><!-- .content -->
-    </div><!-- .side-2 -->
-  </div><!-- #page-4 -->
+    </div><!-- .side-1 -->      
+      <div class='side-2' id='p6'>
+        <div class='content'>
+          
+        </div><!-- .content -->
+      </div><!-- .side-1 -->   
+
 </div>
 <div class="credit">
-  <p></p>
+  <p styles="color: white; text-align: center; position: absolute; top: 90%"><br><br><br></br>
+    Geschrieben von Ramez Soliman<br></br>
+    Design von <a href="https://codepen.io/trending" styles="color: blue" target="_blank">Codepen</a>
+  </p>
 </div>
 <!-- partial -->
   <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
