--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
           NEIN!!! 
           DIES KANN NICHT WAHR SEIN!!!
           O Gott, der barmherzige, bitte verzeihet meine Sünde! 
-          nein, ich bin nicht an meiner Mutters Tod verantwortlich!            
+          nein, ich bin nicht an meiner Mutters Tod verantwortlich! 
+          Bitte...Oh Herr vergieb mir, nur du kannst mich hier noch rausholen, bitte erlöse mich von diesem Geschmach...Wenn du noch zu mir stehen magst dann bitte nimm mich mit in den Himmel und erhöre mein Gejammer !           
         </p>
-        <p>KONTEXT: Da Gretchen nun Wahnsinnig geworden ist, spricht sie mit sich selber und ist komplett Wahnsinnig geworden</p>
       </div><!-- .content -->
     </div><!-- .side-1 -->    
     <div class='side-2' id='p4'>      
