--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <div class='content'>
         <h1>Einblick in Gretchens Tagebuch (Vorwort)</h1>
         <p>
-          Da Magarethe, auch bekannt als Gretchen, ein uneheliches Kind zur Welt brachte und dies daraufhin umbrachte ,wurde ihr den Prozess gemacht. Nun sitzt sie ihr Urteil im Kerker ab. Dieses folgende Tagebuch stellt die möglichen inneren Vorgänge in Gretchens Verstand da. 
+          Da Magarethe, auch bekannt als Gretchen, ein uneheliches Kind zur Welt brachte und dies daraufhin umbrachte, wurde sie verurteilt und harrt ihr Urtiel in ein Kerker aus. Dieses folgende Tagebuch stellt die möglichen inneren Vorgänge in Gretchens Verstand da. 
         </p>
         
       </div><!-- .content -->
     </div><!-- .side-1 -->    
     <div class='side-2' id='p2'>      
       <div class='content'>
-        <h2>Tag 1: Die Schuld</h2>
+        <h2>Tag 1: Ich bin nicht schuldig!</h2>
         <p>
           Und nun saß ich im Kerker. 
           Wie auch ich drüber nachdenk...
@@ -54,7 +54,7 @@
   <div id='page-2' class='page no-anim'>    
     <div class='side-1' id='p3'>
       <div class='content'>
-        <h2>Tag 2: Heinrich? und Gretchens Wahn</h2>
+        <h2>Tag 2: O verzeihet mir mein Herr!</h2>
         <p>
           Der zweite Tag bricht nun ein, wo ich das Urteil im Kerker ausharre.
           Bald ist auch meine Hinrichtung und die Erlösung durch Gottes Gnade.
@@ -67,13 +67,13 @@
           DIES KANN NICHT WAHR SEIN!!!
           O Gott, der barmherzige, bitte verzeihet meine Sünde! 
           nein, ich bin nicht an meiner Mutters Tod verantwortlich! 
-          Bitte...Oh Herr vergieb mir, nur du kannst mich hier noch rausholen, bitte erlöse mich von diesem Geschmach...Wenn du noch zu mir stehen magst dann bitte nimm mich mit in den Himmel und erhöre mein Gejammer !           
+          Bitte...Oh Herr vergieb mir, nur du kannst mich hier von befreien, bitte erlöse mich von diesem Geschmach...Wenn du noch zu mir stehen magst dann bitte nimm mich mit in den Himmel und erhöre mein Gejammer!           
         </p>
       </div><!-- .content -->
     </div><!-- .side-1 -->    
     <div class='side-2' id='p4'>      
       <div class='content'>
-        <h2>Tag 3: Heinrich und ich wieder vereint?</h2>
+        <h2>Tag 3: Heinrich soll doch leben!</h2>
         <p>
          Erst ich dacht mein Henker sei von Gott geschickt worden um mir meine Erlösung zu gewähren 
          Doch...
@@ -113,7 +113,7 @@
   <div id='page-3' class='page no-anim'>    
     <div class='side-1' id='p5'>
       <div class='content'>
-        <h2>Tag 3: Heinrich und ich wieder vereint? TEIL 2</h2>
+        <h2>Tag 3: Wo ist doch das Lieben geblieben?</h2>
         <p>
           O, Als ich versuchet ihn zu küssen... 
           O weh, seine Lippen waren kalt 
